@@ -1,3 +1,7 @@
+Mon Nov  3 12:37:56 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
+
+ - drivers/powerp-bin.c, drivers/usbhid-ups.c: Fix compiler warnings.
+
 Mon Nov  3 12:31:19 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
 
  - drivers/<various>: Changes required by commit r1542.
